--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.min.css"
+    />
     <title>Review App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+</div>
+      </div>
+    </div>
   </body>
 </html>
